[gd_scene load_steps=2 format=3 uid="uid://dg86awcxwv0pg"]

[ext_resource type="Script" path="res://src/gui/scripts/progress_bar.gd" id="1_lc4hi"]

[node name="ProgressBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -432.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lc4hi")

[node name="Margin" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 81.0
offset_bottom = 9.0
color = Color(1, 0.827451, 0, 0.392157)

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 8.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="ProgressBarLag" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 8.0
color = Color(0.121569, 0.796078, 0.137255, 0.392157)

[node name="ProgressBarCurrent" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 8.0
color = Color(0.121569, 0.796078, 0.137255, 1)

[connection signal="resized" from="." to="." method="_on_resized"]
